Issues with section4. Need to align the flex-item "blue box" to center of the cross axis. Fix space between blue box items. Button item needs adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -80,22 +80,32 @@ body {
 .section4{
     display: flex;
     justify-content: center;
-    padding: 2%;
+    align-items: center;
+    padding: 0.5%;
 }
 
 .section4 .blue-box{
     display: flex;
     background-color: #3882F6;
     border-radius: 20px;
-    padding: 1%;
+    padding-left: 5%;
 }
 
 .section4 .blue-box .sign-up-text{
     display: flex;
     flex-direction: column;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .section4 .blue-box .sign-up-button{
     display: flex;
     align-items: center;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+#button-id{
+    padding-left: 10%;
+    padding-right: 10%;
 }
